--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ a{
     height: 100vh;
     width: 100vw;
     background-color: black;
+    color: #eae7d9;
     position: absolute;
     z-index: 10;
     display: flex;
@@ -91,7 +92,7 @@ a{
 }
 .container{
     position: fixed;
-    top: 30%;
+    top: 36%;
     left: 50%;
     transform: translate(-50%);
     /* pointer-events: none;
@@ -99,6 +100,46 @@ a{
     height: 50%;
     width: 50%;
 }
+
+.hamburger_menu{
+    position: fixed;
+    right: 2%;
+    top: 3%;
+    height: 40px;
+    width: 40px;
+}
+.hamburger_menu_close{
+    position: absolute;
+    top: 3%;
+    height: 40px;
+    width: 40px;
+    left: 84%
+}
+.menu_container{
+    position: fixed;
+    right: -30%;
+    height: 100vh;
+    width: 30vw;
+    background-color: black;
+    color: #eae7d9;
+    z-index: 10;
+    transition: 0.5s ease;
+}
+.slide_in{
+    right: 0%;
+    top: 0%;
+    transition: 0.5s ease;
+}
+.text_menu{
+    display: flex;
+    width: 60%;
+    height: 100vh;
+    align-items: center;
+    margin: 0 auto;
+}
+
+
+
 .title{
     font-family: Ogg, serif;
     font-size: 94px;
@@ -252,8 +293,7 @@ a{
 /* FOOTER */
 .spacer{
     width: 100%;
-    height: 70vh;
-    /* background-color: #001930; */
+    height: 100vh;
 }
 
 .conclusion{
@@ -279,8 +319,8 @@ a{
     .text_loader:after{
         font-size: 18px;
     }
-    .no_vis{
-        opacity: 0;
+    .container{
+        top: 30%;
     }
     .title{
         font-size: 40px;
