--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ p{
 }
 a{
     text-decoration: none;
-    color: #002d57;
+    color: inherit;
 }
 .loader{
     height: 100vh;
@@ -131,11 +131,13 @@ a{
     transition: 0.5s ease;
 }
 .text_menu{
-    display: flex;
     width: 60%;
-    height: 100vh;
-    align-items: center;
+    /* height: 100vh; */
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
     margin: 0 auto;
+    font-family: Ogg, serif;
 }
 
 
@@ -172,7 +174,7 @@ a{
 .scale-down-center {
 	-webkit-animation: scale-down-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
             animation: scale-down-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-            animation-delay: 1s;
+            animation-delay: 1.4s;
 }
 @-webkit-keyframes scale-down-center {
     0% {
