--- a/style.css
+++ b/style.css
@@ -67,22 +67,22 @@ a{
     margin: 30px;
 }
 .text_loader:after{
-    content: 'Loading & optimizing 3D model';
+    content: 'Refilling cerveza';
     animation: loading 2s infinite;
-    font-size: 30px;
+    font-size: 22px;
 }
 @keyframes loading{
     0%{
-        content: 'Loading & optimizing 3D model';
+        content: 'Refilling cerveza';
     }
     25%{
-        content: 'Loading & optimizing 3D model.';
+        content: 'Refilling cerveza.';
     }
     50%{
-        content: 'Loading & optimizing 3D model..';
+        content: 'Refilling cerveza..';
     }
     75%{
-        content: 'Loading & optimizing 3D model...';
+        content: 'Refilling cerveza...';
     }
 
 }
@@ -99,6 +99,7 @@ a{
     user-select: none; */
     height: 50%;
     width: 50%;
+    z-index: 1;
 }
 
 .hamburger_menu{
@@ -157,6 +158,7 @@ a{
 
 .margin-wrapper{
     margin: 0 20px;
+    z-index: 5;
 }
 .landing{
     width: calc(100vw - 30px); /* voglio mettere i margini laterali */
@@ -197,8 +199,6 @@ a{
               transform: scale(0.8);
     }
 }
-
-
 .landing_text{
     grid-column: 1 / 6;
     grid-row: 1 / 3;
@@ -289,14 +289,34 @@ a{
 }
 
 
-
-
-
-
 /* FOOTER */
 .spacer{
     width: 100%;
     height: 100vh;
+}
+
+/* DRAWING svg */
+.drawing{
+    background: url('media/drawing.svg') no-repeat 52%;
+    background-size: contain;
+    height: 300px;
+    width: auto;
+    margin: 0 auto;
+    z-index: -1000000;
+}
+.catch{
+    animation: catch 4s ease infinite alternate-reverse;
+}
+@keyframes catch{
+    0%{
+    }
+    25%{
+        transform: translate(300px);
+    }
+    75%{
+        transform: translate(-300px);
+    }
+    
 }
 
 .conclusion{
